add tg and discord cmd module

--- a/config.ini
+++ b/config.ini
@@ -16,6 +16,15 @@ time_format = '%Y-%m-%d %H:%M:%S'
 [[Admin]]
 rejoin = True
 avoid_rejoining = []
+[[MsgLogger]]
+[[TgCmder]]
+tg_chat = 'channel#'
+tg_bot_name = 'drrr_bot'
+tg_cli_path = '/usr/bin/telegram-cli'
+tg_key_path = '~/.telegram-cli/tg-server.pub'
+[[DcCmder]]
+dc_token = 'bot-token'
+dc_channel = 700000000000000007
 [[Config]]
 [[Music]]
 resume_after_interrupted = True
